[bmalloc] Bug fix for wait time when it's in mini mode. https://bugs.webkit.org/show_bug.cgi?id=203121

Reviewed by Yusuke Suzuki.

Since r243144, m_waitTime is never changed on mini mode.

* bmalloc/Scavenger.cpp:
(bmalloc::Scavenger::threadRunLoop):


Canonical link: https://commits.webkit.org/216534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251268 268f45cc-cd09-0410-ab3c-d52691b4dbfc